# CBMC

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  Downloads  README.md  env.yml  generate_arithmetic_mnist.py  generate_data_numbers.py  generate_data_pendulum.py  generate_data_shapes.py  pyproject.toml  requirements.txt  run.py  run.sh  run_mnist_experiments.sh  test.py
architectures/: backbone.py  cnn_baseline.py  cnn_cbm.py  cnn_cbmc.py  cnn_cem.py  cnn_regression.py  conv_vae_baseline.py  conv_vae_cbm.py  conv_vae_cem.py  transformer_cbmc.py  vae_baseline.py  vae_cbm_baseline.py  vae_cbmc.py  vae_cem_baseline.py
cbm/: __init__.py  datasets.py  evaluate.py  models.py  training.py  utils.py
cbmc/: __init__.py  bottleneck.py  configs.py
cbmc/concepts/: __init__.py  cem.py
cbmc/data/: mnist.py  pendulum.py
cbmc/utils/: sampling.py
configs/: VAE_config.py
datasets/: 3dshapes.py  __init__.py  extractH5data.py  shapes.py
experiments/: README.md  train_cbm.py
experiments/configs/: cbm_mnist.json  cbm_pendulum.json  cem_mnist.json  cem_pendulum.json  exp_cbm_cls_mnist_backbone.json  exp_cbm_cls_pendulum_backbone.json  exp_cem_gen_mnist_backbone.json  exp_cem_gen_pendulum_backbone.json  exp_cls_mnist.json  exp_gen_mnist.json  exp_gen_pendulum.json  train_cbm_gen_pendulum.json  (+6 more)
models/: CBM_VAE.py  registry.py
notebooks/: analyse_dataset.ipynb  analyse_pendulum.ipynb  experiment.ipynb  mnist.ipynb  random_experiment.ipynb
scripts/: run_experiment.py  train.py
tests/: conftest.py  test_datasets.py  test_evaluate.py  test_models.py  test_training.py
(+6 files in other folders)
